# DEDIS-project

./: .env.example  .gitignore  DEDIS-project  README.md  env  flake.nix  index.php  manage.py  package.json  pyproject.toml  requirements.txt  scripts.py  server_up.sh  vercel.json  vercel.sh
alpine/: settings.py  urls.py  views.py  wsgi.py
api/: admin.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
api/settings/: __init__.py  default.py  dev.py  hasher_settings.py  prod.py
application/config/: config.php  routes.php
application/controllers/: Custom_welcome.php  Pages.php  Password_Creation.php  Special_Controller.php  Test_01_Controller.php  Welcome.php
application/views/: header.php  level_test.php  password_hashing.php  welcome_test01.php
application/views/templates/: custom_welcome.php  footer.php  header.php
pages/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
scripts/migration_helpers/: README.md  __init__.py  generators.py
templates/: 403.html  403_csrf.html  404.html  500.html  base.html  index.html
templates/pages/: about_us.html  blank.html  example.html  get_news.html  home.html  new_report.html  news.html  newsPostForm.html  report.html  reportForm.html  reports.html
templates/registration/: accounts.html  login.html  profile.html  signup.html
templates/widgets/: footer.html  navbar.html  news_post.html  paginator.html  report_card.html
templates/widgets/badges/: permission.html  rank.html  user.html
templates/widgets/comment/: new_comment.html  post.html  (+1 more)
templates/wrappers/: 404.html
(+19 files in other folders)
